# pyayay

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  version.txt
.github/workflows/: cibuildwheel.yml  python-package.yml
src/: aychip.cpp  aychip.h  wrapper.cpp
src/ayumi/: ayumi.c
src/utils/: tools.h
tests/: test_ayumi.py
