[project]
name = "pyayay"
authors = [
  { name="Ruslan Grokhovetskiy", email="ruslan.gr@gmail.com" },
  { name="Peter Sovietov", email="peter@sovietov.com" },
]
description = "PyAYay is a Python extension wrapper for AY-3-8910 sound chip emulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ruguevara/pyayay"
Issues = "https://github.com/ruguevara/pyayay/issues"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "version.txt"
version_scheme = "post-release"
local_scheme = "no-local-version"
